# DA2_esp

./: .gitignore  CMakeLists.txt  Comm_Hanlder.md  Command.md  Gateway.mdj  HTTP_COAP_BIDIRECTIONAL_IMPLEMENTATION.md  QSPI_SDCARD_DESIGN.md  RGB_LED_STATUS.md  TODO.md  UPDATE_TASK.md  WEB_CONFIG_DATAFLOW.md  WEB_CONFIG_IMPLEMENTATION_PLAN.md  WEB_CONFIG_UI_DESIGN.md  build.sh  partitions.csv  report_module_base_setting.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
.cache/clangd/index/: DA2_esp.c.6D8E4E3CA41AA95C.idx  DA2_esp.h.3B82E30BE87FD00A.idx  audio_device.c.5392601944BBB641.idx  bg96_comm.c.CD9B28395581EB86.idx  bg96_comm.h.019CE26E8B3D7AB1.idx  bth_device.c.72184F6CB00B0AA4.idx  cdc.h.211DD6ADC7D2D085.idx  cdc_device.c.B9F688A9661BF1BC.idx  config_handler.c.EF19B539E02EC10F.idx  config_handler.h.B9606CCC7418E99E.idx  config_load_save.c.4675246290C22DB2.idx  dcd.h.B6A677610D6AD138.idx  dcd_dwc2.c.338A435954CA5950.idx  descriptors_control.c.F52CBB3A35510288.idx  descriptors_control.h.36421B76698ED092.idx  dfu_device.c.47F0DC980CB8A6B7.idx  dfu_rt_device.c.4385FB5F6163DECA.idx  dwc2_common.c.DBE1A7917036E14A.idx  dwc2_common.h.7F971C44E331BBB4.idx  dwc2_esp32.h.B58F14B17F76D7BC.idx  dwc2_type.h.D29B70F999373A04.idx  ecm_rndis_device.c.CC254016D749952B.idx  enum.c.981435419062AEAB.idx  enum.h.F678319FA31867B5.idx  eppp_link.c.89C88B0CA242BB50.idx  eppp_link.h.6259CA59C6C49AFE.idx  eppp_transport.h.F53E914BD02A9A22.idx  eppp_transport_eth.h.E45BAF7BFE2F599D.idx  eppp_transport_sdio.h.2811E7E39E149CD8.idx  eppp_transport_spi.h.08E685A8EA9F113A.idx  eppp_transport_uart.h.96CEC9AF595CEDEB.idx  eppp_uart.c.5201A1DE095FF5FD.idx  esp_modem_uart.c.5A913E5687CEF2F5.idx  esp_modem_uart.h.FCFEE982A2B07CD9.idx  esp_modem_uart_compat.c.C2EEFB4892E54EBC.idx  esp_modem_uart_compat.h.6B27373423BDB5E8.idx  esp_modem_uart_config.h.356BDD2287018B93.idx  esp_modem_uart_dce.h.B9BB7CC2344254BE.idx  esp_modem_uart_dce_service.c.F369B6E8F1AFABFB.idx  esp_modem_uart_dce_service.h.72859A669875F89D.idx  (+148 more)
Application/Config_Handler/include/: config_handler.h
Application/Config_Handler/src/: config_handler.c  config_load_save.c
Application/Data_Communication_Handler/include/: uart_handler.h  usb_handler.h
Application/Data_Communication_Handler/src/: uart_handler.c  usb_handler.c
Application/FOTA/: README.md
Application/FOTA/include/: FOTA_Hanlder.h  config.h  fota_ap.h  fota_config.h  fota_handler.h
Application/FOTA/src/: FOTA_Handler.c  fota_ap.c  fota_handler.c
Application/HMI_Task/: HMI_APP_BUILD_FLASH_GUIDE.md
Application/HMI_Task/include/: hmi_task.h
Application/HMI_Task/src/: hmi_task.c
Application/Internet_Monitor_Handler/include/: internet_monitor.h
Application/Internet_Monitor_Handler/src/: internet_monitor.c
Application/MCU_LAN_Handler/include/: frame_types.h  mcu_lan_handler.h
Application/MCU_LAN_Handler/src/: mcu_lan_handler.c  mcu_lan_handler_downlink.c  mcu_lan_handler_uplink.c
Application/MCU_LAN_Hanlder/src/: mcu_lan_handler.h
Application/PPP_Server/include/: ppp_server.h  ppp_server_config.h
Application/PPP_Server/src/: ppp_server.c
Application/Web_Config_Handler/include/: web_config_handler.h
Application/Web_Config_Handler/src/: api_config.c  api_status.c  captive_dns.c  web_server.c
Application/Web_Config_Handler/web/: index.html  mock_server.js  package-lock.json  package.json  vite.config.js
BSP/MCU_LAN_Communication/include/: lan_comm.h
BSP/MCU_LAN_Communication/src/: lan_comm.c
BSP/QSPI_Driver/include/: qspi_hal.h  qspi_hal_config.h
BSP/QSPI_Driver/src/: qspi_hal_common.c  qspi_hal_master.c  qspi_hal_slave.c
BSP/bg96_communication/include/: bg96_comm.h
BSP/bg96_communication/src/: bg96_comm.c
BSP/ds1307_rtc/include/: ds1307_rtc.h
BSP/ds1307_rtc/src/: ds1307_rtc.c
BSP/esp_modem/include/: esp_modem.h  esp_modem_compat.h  esp_modem_config.h  esp_modem_dce.h  esp_modem_dce_service.h  esp_modem_dte.h  esp_modem_netif.h
BSP/esp_modem/src/: esp_modem.c  esp_modem_compat.c  esp_modem_dce_service.c  esp_modem_netif.c
BSP/esp_modem_uart/include/: esp_modem_uart.h  esp_modem_uart_compat.h  esp_modem_uart_config.h  esp_modem_uart_dce.h  esp_modem_uart_dce_service.h  esp_modem_uart_dte.h  esp_modem_uart_netif.h
BSP/esp_modem_uart/src/: esp_modem_uart.c  esp_modem_uart_compat.c  esp_modem_uart_dce_service.c  esp_modem_uart_netif.c
BSP/esp_modem_usb/include/: esp_modem_usb.h  esp_modem_usb_config.h  esp_modem_usb_dce.h  esp_modem_usb_dce_command_lib.h  esp_modem_usb_dce_common_commands.h  esp_modem_usb_dte.h  esp_modem_usb_dte_internal.h  esp_modem_usb_internal.h  esp_modem_usb_netif.h  esp_modem_usb_recov_helper.h  iot_usbh_cdc.h  iot_usbh_cdc_type.h  iot_usbh_descriptor.h  usbh_modem_board.h  usbh_modem_wifi.h
BSP/esp_modem_usb/src/: esp_modem_usb.c  esp_modem_usb_dce.c  esp_modem_usb_dce_command_lib.c  esp_modem_usb_dce_common_commands.c  esp_modem_usb_dte.c  esp_modem_usb_netif.c  iot_usbh_cdc.c  (+4 more)
BSP/rbg_led_ws_handler/: rbg_handler.c  rbg_handler.h
HMI_Project/: DA2_gateway.HMI
bootloader_components/main/: CMakeLists.txt  boot_support_function.c  boot_support_function.h  bootloader_hooks.h  bootloader_start.c
config_app/: BUILD_INSTRUCTIONS.md  Gateway_Config_Tool_v4.spec  config_protocol.py  gateway_config_tool.py  gateway_config_tool.spec  implement.md  lora_config_definitions.py  main.py  requirements.txt
config_app/.github/: copilot-instructions.md
config_app/src/: __init__.py
examples/: boot_scrap.c  esp4g_router.c  main_backup.c  main_scrap.c
flash_file/: flash_WAN.bat
main/: CMakeLists.txt  DA2_esp.c  DA2_esp.h  Kconfig.projbuild  cmd_i2ctools.c  cmd_i2ctools.h  idf_component.yml  oled_monitor_task.c  oled_monitor_task.h  pwr_monitor_task.c  pwr_monitor_task.h  pwr_source_handler.c  pwr_source_handler.h
mqtt_handler/: mqtt_handler.c  mqtt_handler.h
rbg_led_ws_handler/: rbg_handler.c  rbg_handler.h
sensor_handler/: sensor_handler.c  sensor_handler.h
usb_handler/: jtag_task.c  rw_task.c  usb_handler.h  usb_host_task.c
wifi_handler/: wifi_connect.c  wifi_connect.h  wifi_scan.c  wifi_scan.h
(+90 files in other folders)
